capa de acceso a datos con doctrine y diseño del DMI

--- a/src/AV/CommonBundle/Resources/config/services.yml
+++ b/src/AV/CommonBundle/Resources/config/services.yml
@@ -58,3 +58,11 @@ services:
     av.mail.manager:
         class:     AV\CommonBundle\Manager\MailManager
         arguments: ["@mailer", "@twig",'@service_container']
+
+    av.configuracion:
+        parent: av.manager
+        class: AV\CommonBundle\Manager\ConfiguracionManager
+
+    av.conf:
+        parent: av.manager
+        class: AV\CommonBundle\Manager\ConfiguracionManager
