--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -54,22 +54,22 @@ security:
                 secret: "%secret%"
                 lifetime:   604800  # 604.800 = 3.600 * 24 * 7 = 1 semana
             switch_user: { role: ROLE_ADMIN }
-#        frontend:
-#            pattern:        ^/*
-#            provider:       chain_provider
-#            anonymous:      true
-#            form_login:
-#                login_path: frontend_login
-#                check_path: frontend_login
-#                default_target_path: frontend_login_redirect
-#                always_use_default_target_path: true
-#            logout:
-#                path:       /logout
-#                target:     frontend_homepage
-#            remember_me:
-#                secret: "%secret%"
-#                lifetime:   604800  # 604.800 = 3.600 * 24 * 7 = 1 semana
-#            switch_user: { role: ROLE_USER }
+        frontend:
+            pattern:        ^/*
+            provider:       administradores #aqui estaba el chain_provider
+            anonymous:      true
+            form_login:
+                login_path: frontend_login
+                check_path: frontend_login
+                default_target_path: frontend_login_redirect
+                always_use_default_target_path: true
+            logout:
+                path:       /logout
+                target:     frontend_homepage
+            remember_me:
+                secret: "%secret%"
+                lifetime:   604800  # 604.800 = 3.600 * 24 * 7 = 1 semana
+            switch_user: { role: ROLE_USER }
         main:
             anonymous: true
             
@@ -80,8 +80,8 @@ security:
 #        - { path: ^/user/(%locales_app%)/security/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 #***************************************BACKEND*******************************************************************
-        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
+#        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
 
 #***************************************OTHERS********************************************************************
         - { path: ^/*, roles: [IS_AUTHENTICATED_FULLY, IS_AUTHENTICATED_ANONYMOUSLY] }
