--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,9 @@ security:
         Symfony\Component\Security\Core\User\User: plaintext
         AV\CommonBundle\Entity\Administrador: { algorithm: bcrypt, cost: 4 }
 
+#    encoders:
+#        UserBundle\Entity\User: plaintext
+
     # http://symfony.com/doc/current/book/security.html#hierarchical-roles
     role_hierarchy:
 #        ROLE_USER:        [ROLE_DEMANDANTE, ROLE_CUIDADOR, ROLE_EMPRESA]
@@ -80,8 +83,8 @@ security:
 #        - { path: ^/user/(%locales_app%)/security/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 #***************************************BACKEND*******************************************************************
-#        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
+        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
 
 #***************************************OTHERS********************************************************************
         - { path: ^/*, roles: [IS_AUTHENTICATED_FULLY, IS_AUTHENTICATED_ANONYMOUSLY] }
