--- a/src/AV/BackendBundle/Resources/config/routing.yml
+++ b/src/AV/BackendBundle/Resources/config/routing.yml
@@ -32,3 +32,10 @@ backend_faq:
     defaults: { _locale: '%locale%' }
     requirements:
         _locale: '%locales_app%'
+
+backend_newsletter:
+    resource: "@BackendBundle/Resources/config/routing/newsletter.yml"
+    prefix:   /{_locale}/newsletter/
+    defaults: { _locale: '%locale%' }
+    requirements:
+        _locale: '%locales_app%'
