--- a/src/AV/FrontendBundle/Resources/config/routing/frontend.yml
+++ b/src/AV/FrontendBundle/Resources/config/routing/frontend.yml
@@ -7,3 +7,9 @@ frontend_event_details_ref:
     path:     /event-details/{ref}/
     locales:  { es: '/evento/{ref}/', en: '/event-details/{ref}/' }
     defaults: { _controller: 'FrontendBundle:Default:eventDetails' }
+
+frontend_subscribe:
+    path:     /subscribe/
+    locales:  { es: '/subscribe/', en: '/subscribe/' }
+    defaults: { _controller: 'FrontendBundle:Default:subscribe' }
+    methods:  [POST]
