--- a/src/AV/BackendBundle/Resources/config/routing.yml
+++ b/src/AV/BackendBundle/Resources/config/routing.yml
@@ -39,3 +39,10 @@ backend_newsletter:
     defaults: { _locale: '%locale%' }
     requirements:
         _locale: '%locales_app%'
+
+backend_contacto:
+    resource: "@BackendBundle/Resources/config/routing/contacto.yml"
+    prefix:   /{_locale}/contacto/
+    defaults: { _locale: '%locale%' }
+    requirements:
+        _locale: '%locales_app%'
