--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -83,8 +83,8 @@ security:
 #        - { path: ^/user/(%locales_app%)/security/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
 
 #***************************************BACKEND*******************************************************************
-        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
+#        - { path: ^/backend/(%locales_app%)/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/backend/*, roles: [ROLE_ADMIN] }
 
 #***************************************OTHERS********************************************************************
         - { path: ^/*, roles: [IS_AUTHENTICATED_FULLY, IS_AUTHENTICATED_ANONYMOUSLY] }
