gallery item first times of backend crud

--- a/src/AV/BackendBundle/Resources/config/routing.yml
+++ b/src/AV/BackendBundle/Resources/config/routing.yml
@@ -53,3 +53,10 @@ backend_categoria:
     defaults: { _locale: '%locale%' }
     requirements:
         _locale: '%locales_app%'
+
+backend_gallery_item:
+    resource: "@BackendBundle/Resources/config/routing/gallery_item.yml"
+    prefix:   /{_locale}/gallery-item/
+    defaults: { _locale: '%locale%' }
+    requirements:
+        _locale: '%locales_app%'
