--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,9 +40,10 @@ framework:
     default_locale: '%locale%'
     trusted_hosts: ~
     session:
+        handler_id:  ~ #Estaba así en nous_allons
         # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-        handler_id: session.handler.native_file
-        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
+#        handler_id: session.handler.native_file
+#        save_path: '%kernel.project_dir%/var/sessions/%kernel.environment%'
     fragments: ~
     http_method_override: true
     assets: ~
