--- a/src/AV/FrontendBundle/Resources/config/routing/frontend.yml
+++ b/src/AV/FrontendBundle/Resources/config/routing/frontend.yml
@@ -15,12 +15,37 @@ frontend_contact_us:
     defaults: { _controller: 'FrontendBundle:Default:contactUs' }
     methods:  [POST]
 
-frontend_events:
-    path:     /events/
-    locales:  { es: '/eventos/', en: '/events/' }
-    defaults: { _controller: 'FrontendBundle:Frontend:events' }
-
 frontend_event_details_ref:
     path:     /event-details/{ref}/
     locales:  { es: '/evento/{ref}/', en: '/event-details/{ref}/' }
     defaults: { _controller: 'FrontendBundle:Frontend:eventDetailsRef' }
+
+frontend_ministerio:
+    path:     /ministerio/
+    locales:  { es: '/ministerio/', en: '/ministry/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:ministerio' }
+
+frontend_events:
+    path:     /eventos/
+    locales:  { es: '/eventos/', en: '/events/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:events' }
+
+frontend_adoraciones:
+    path:     /adoracion-y-alabanzas/
+    locales:  { es: '/adoracion-y-alabanzas/', en: '/worship-and-praise/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:adoraciones' }
+
+frontend_momentos:
+    path:     /momentos-sobrenaturales-y-testimonios/
+    locales:  { es: '/momentos-sobrenaturales-y-testimonios/', en: '/supernatural-moments-and-testimonies/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:momentos' }
+
+frontend_ensenanzas:
+    path:     /ensenanzas/
+    locales:  { es: '/ensenanzas/', en: '/teachings/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:ensenanzas' }
+
+frontend_trabajo_comunitario:
+    path:     /trabajo-comunitario/
+    locales:  { es: '/trabajo-comunitario/', en: '/community-work/' }
+    defaults: { _controller: 'FrontendBundle:Frontend:trabajoComunitacio' }
